added initial HDF5 serialization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,8 @@ set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set(HDF5_ROOT /reg/neh/home4/weninc/.conda/envs/lcls2)
+
+find_package(HDF5 REQUIRED HL)
+
 add_subdirectory(pdsdata)
