--- a/pdsdata/CMakeLists.txt
+++ b/pdsdata/CMakeLists.txt
@@ -1,3 +1,4 @@
+
 add_library(xtc SHARED
     xtc/src/BldInfo.cc
     xtc/src/L1AcceptEnv.cc
@@ -21,6 +22,24 @@ target_include_directories(xtc PUBLIC
     #$<INSTALL_INTERFACE:include>
     ${HDF5_INCLUDE_DIRS}
 )
+
+add_library(dgram SHARED
+    app/dgram.cc
+)
+
+target_link_libraries(dgram
+    xtc
+    ${PYTHON_LIBRARIES}
+)
+
+target_include_directories(dgram PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}> 
+    ${PYTHON_INCLUDE_DIRS}
+    ${NUMPY_INCLUDE_DIRS}
+    ${HDF5_INCLUDE_DIRS}
+)
+
+set_target_properties(dgram PROPERTIES PREFIX "")
 
 target_link_libraries(xtc
     ${HDF5_LIBRARIES}
