split off hdf5 into separate package because of dependencies, make drp work in top level CMakeLists.txt, and modify drp to make it work with real DTI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,5 @@ set(HDF5_ROOT /reg/neh/home4/weninc/.conda/envs/lcls2)
 find_package(HDF5 REQUIRED HL)
 
 add_subdirectory(pdsdata)
+add_subdirectory(xtchdf5)
+add_subdirectory(drp)
