Alot of renaming

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,6 @@ set(HDF5_ROOT /reg/neh/home4/weninc/.conda/envs/lcls2)
 
 find_package(HDF5 REQUIRED HL)
 
-add_subdirectory(pdsdata)
-add_subdirectory(xtchdf5)
+add_subdirectory(xtcdata)
+add_subdirectory(pds)
 add_subdirectory(drp)
