--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 
+set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -Wall)
 
 find_package(PythonInterp 3.5 REQUIRED)
 find_package(PythonLibs 3.5 REQUIRED)
@@ -16,7 +17,7 @@ find_program(CLANG_FORMAT "clang-format")
 if(CLANG_FORMAT)
   add_custom_target(
     clang-format
-    COMMAND ${CLANG_FORMAT} 
+    COMMAND ${CLANG_FORMAT}
     -i
     -style=file
     ${ALL_CXX_SOURCE_FILES}
