--- a/psdaq/CMakeLists.txt
+++ b/psdaq/CMakeLists.txt
@@ -1,15 +1,15 @@
 
-add_library(pds SHARED
+add_library(psdaq SHARED
     hdf5/src/Hdf5Writer.cc
 )
 
-target_include_directories(pds PUBLIC
+target_include_directories(psdaq PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
     $<INSTALL_INTERFACE:include>
     ${HDF5_INCLUDE_DIRS}
 )
 
-target_link_libraries(pds
+target_link_libraries(psdaq
     ${HDF5_LIBRARIES}
     ${HDF5_HL_LIBRARIES}
 )
@@ -18,6 +18,6 @@ add_executable(h5writer
     app/h5writer.cc
 )
 target_link_libraries(h5writer
-    pds
+    psdaq
     xtc
 )
