Integrate pds/service, pds/eb from pds repo.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,4 +36,4 @@ find_package(HDF5 REQUIRED HL)
 
 add_subdirectory(xtcdata)
 add_subdirectory(psdaq)
-add_subdirectory(drp)
+#add_subdirectory(drp)
