--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,12 @@
 cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 
-set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -Wall)
+add_compile_options(-Wall)
+add_compile_options(-Wno-uninitialized)
 
 find_package(PythonInterp 3.5 REQUIRED)
 find_package(PythonLibs 3.5 REQUIRED)
 
-set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_BUILD_TYPE RelWithDebInfo)
 
 file(GLOB_RECURSE
      ALL_CXX_SOURCE_FILES
