remove fex stuff from drp for now

--- a/drp/CMakeLists.txt
+++ b/drp/CMakeLists.txt
@@ -3,22 +3,21 @@ cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_library(utils SHARED
-    mpscqueue.cc
-    fex.cc
-)
+#add_library(utils SHARED
+#    mpscqueue.cc
+#    fex.cc
+#)
 
 add_executable(drp
     main.cc
 )
 
-target_include_directories(utils PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
-    $<INSTALL_INTERFACE:include>
-)
+#target_include_directories(utils PUBLIC
+#    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
+#    $<INSTALL_INTERFACE:include>
+#)
 
 target_link_libraries(drp
-    utils
     pthread
     xtc
 )
