Added DTI control package

--- a/psdaq/CMakeLists.txt
+++ b/psdaq/CMakeLists.txt
@@ -3,4 +3,5 @@ add_subdirectory(service)
 add_subdirectory(cphw)
 add_subdirectory(eb)
 add_subdirectory(epicstools)
+add_subdirectory(dti)
 add_subdirectory(xpm)
