Added eyescan utility for margin analysis

--- a/psdaq/cphw/CMakeLists.txt
+++ b/psdaq/cphw/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(cphw SHARED
     Reg_rssi.cc
     AmcTiming.cc
     AxiVersion.cc
+    GthEyeScan.cc
     HsRepeater.cc
     RingBuffer.cc
     XBar.cc
@@ -12,6 +13,7 @@ add_library(cphwr SHARED
     Reg.cc
     AmcTiming.cc
     AxiVersion.cc
+    GthEyeScan.cc
     HsRepeater.cc
     RingBuffer.cc
     XBar.cc
@@ -37,6 +39,20 @@ target_include_directories(cphwr PUBLIC
 add_executable(amctiming amctiming.cc)
 
 target_link_libraries(amctiming
+    dl
+    pthread
+    cphw
+    /reg/common/package/cpsw/framework-R3-4/x86_64-rhel7-opt/lib/libcpsw.so
+#    /reg/common/package/boost/1.57.0/x86_64-rhel7-gcc48-opt/lib
+    /reg/common/package/yaml-cpp/yaml-cpp-0.5.3/x86_64-rhel7-gcc48-opt/lib/libyaml-cpp.so
+)
+
+#
+#  amc_eyescan
+#
+add_executable(amc_eyescan amc_eyescan.cc)
+
+target_link_libraries(amc_eyescan
     dl
     pthread
     cphw
