Add HSD apps.  Add procmgr and scripts for teststand running.

--- a/psdaq/CMakeLists.txt
+++ b/psdaq/CMakeLists.txt
@@ -1,7 +1,9 @@
 #add_subdirectory(hdf5)
 add_subdirectory(service)
+add_subdirectory(mmhw)
 add_subdirectory(cphw)
 add_subdirectory(eb)
 add_subdirectory(epicstools)
 add_subdirectory(dti)
 add_subdirectory(xpm)
+add_subdirectory(hsd)
