--- a/psdaq/scripts/part0.cnf
+++ b/psdaq/scripts/part0.cnf
@@ -1,4 +1,6 @@
+bin_path     = '/reg/neh/home/weaver/lcls2/build/'
 scripts_path = '../psdaq/scripts/'
+bins_path    = bin_path+scripts_path
 
 platform = '0'
 username = 'lcls2'
@@ -12,7 +14,7 @@ daq_tst_dev04 = "172.21.42.148"
 daq_tst_dev05 = "172.21.42.155"
 
 epics_env = 'EPICS_CA_ADDR_LIST=10.0.3.255 EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067'
-pcas_env = 'EPICS_CAS_INTF_ADDR_LIST=10.0.3.3'
+pcas_env = 'EPICS_CAS_INTF_ADDR_LIST=10.0.3.5'
 shelf = '2'
 ip_addr = '10.0.'+shelf
 
@@ -31,15 +33,16 @@ ip_addr = '10.0.'+shelf
 #        'u'         -> uniqueid: use 'id' as detector alias (supported by acq, cam, camedt, evr, and simcam)
 
 procmgr_config = [
- { host: daq_tst_dev01,  id:'partcas',port:'29450', flags:'s', env:pcas_env, cmd:scripts_path+'/launch_pcaspy '+scripts_path+'/partcas.py -P DAQ:LAB2'},
- { host: daq_tst_dev01,  id:'modcas' ,port:'29451', flags:'s', env:pcas_env, cmd:scripts_path+'/launch_pcaspy '+scripts_path+'/modcas.py -P DAQ:LAB2:XPM:'+shelf},
+ { host: daq_tst_dev05,  id:'partcas',port:'29450', flags:'s', env:pcas_env, cmd:bins_path+'/launch_pcaspy '+bins_path+'/partcas.py -P DAQ:LAB2'},
+ { host: daq_tst_dev05,  id:'modcas' ,port:'29451', flags:'s', env:pcas_env, cmd:bins_path+'/launch_pcaspy '+bins_path+'/modcas.py -P DAQ:LAB2:XPM:'+shelf},
 
- {                       id:'partca-'+platform ,flags:'s', cmd:scripts_path+'/launch_py '+scripts_path+'/partca.py DAQ:LAB2:PART:'+platform},
-# {                       id:'modca'  ,flags:'s', cmd:scripts_path+'/launch_py '+scripts_path+'/xpmca.py DAQ:LAB2:XPM:'+shelf},
-# {                       id:'deadca-'+platform  ,flags:'s', cmd:scripts_path+'/launch_py '+scripts_path+'/deadca.py DAQ:LAB2 '+platform+' '+shelf},
- { host: daq_tst_dev01,  id:'xpmioc' ,port:'29452', flags:'s', env:epics_env, cmd:'psdaq/xpm/xpmPVs -a '+ip_addr+'.102 -P DAQ:LAB2'},
+ {                       id:'partca-'+platform ,flags:'s', cmd:bins_path+'/launch_py '+bins_path+'/partca.py DAQ:LAB2:PART:'+platform},
+ {                       id:'modca'  ,flags:'s', cmd:bins_path+'/launch_py '+bins_path+'/xpmca.py DAQ:LAB2:XPM:'+shelf},
+ {                       id:'deadca-'+platform  ,flags:'s', cmd:bins_path+'/launch_py '+bins_path+'/deadca.py DAQ:LAB2 '+platform+' '+shelf},
+ { host: daq_tst_dev05,  id:'xpmioc' ,port:'29452', flags:'s', env:epics_env, cmd:bin_path+'psdaq/xpm/xpmPVs -a '+ip_addr+'.102 -P DAQ:LAB2'},
  {                       id:'dtisimple' , flags:'sx', cmd:'psdaq/dti/dti_simple -a '+ip_addr+'.104 -u 0xf -f 1,2,4,8'},
- { host: daq_tst_dev03,  id:'xLoop', flags:'s', cmd:'pgp/pgpcardG3/app/xLoopTest -P /dev/pgpcardG3_0_5 -T 0x80 -L 4 -s 10240 -n 16 -F 8 -S' },
+ { host: daq_tst_dev03,  id:'xLoop', flags:'s', cmd:bin_path+'pgp/pgpcardG3/app/xLoopTest -P /dev/pgpcardG3_0_5 -T 0x80 -L 0xf0 -s 10240 -n 16 -F 8 -S' },
+ { host: daq_tst_dev01,  id:'xRead', flags:'sx', cmd:bin_path+'pgp/pgpcardG3/app/xRead -P /dev/pgpcardG3_0_5 -L 4 -r' },
 
 ## procstat
  {                       id:'procstat',    flags:'s',    env:'LD_LIBRARY_PATH=/reg/g/pcds/package/python-2.5.2/lib:/reg/g/pcds/package/qt-4.3.4_x86_64/lib PATH=/reg/g/pcds/package/python-2.5.2/bin:/reg/g/pcds/package/qt-4.3.4_x86_64/bin: PYTHONPATH=', cmd:'/reg/g/pcds/dist/pds/tools/procmgr/procstat.py -t '+username+' -e0 -n none -p '+platform+' p'+platform+'.cnf.last'},
