Move dgram.cc to psana dir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(HDF5 REQUIRED HL)
 
 add_subdirectory(xtcdata)
+add_subdirectory(psana)
 add_subdirectory(psdaq)
 add_subdirectory(pgp)
 add_subdirectory(drp)
