--- a/xtcdata/CMakeLists.txt
+++ b/xtcdata/CMakeLists.txt
@@ -21,22 +21,22 @@ target_include_directories(xtc PUBLIC
     $<INSTALL_INTERFACE:include>
 )
 
-add_library(dgram SHARED
-    app/dgram.cc
-)
-
-target_link_libraries(dgram
-    xtc
-    ${PYTHON_LIBRARIES}
-)
-
-target_include_directories(dgram PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}> 
-    ${PYTHON_INCLUDE_DIRS}
-    ${NUMPY_INCLUDE_DIRS}
-)
-
-set_target_properties(dgram PROPERTIES PREFIX "")
+#add_library(dgram SHARED
+#    app/dgram.cc
+#)
+#
+#target_link_libraries(dgram
+#    xtc
+#    ${PYTHON_LIBRARIES}
+#)
+#
+#target_include_directories(dgram PUBLIC
+#    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}> 
+#    ${PYTHON_INCLUDE_DIRS}
+#    ${NUMPY_INCLUDE_DIRS}
+#)
+#
+#set_target_properties(dgram PROPERTIES PREFIX "")
 
 target_link_libraries(xtc
 )
