update h5writer.  remove using statement from xtciterator. fix warning in xtcreader.

--- a/xtcdata/CMakeLists.txt
+++ b/xtcdata/CMakeLists.txt
@@ -14,6 +14,7 @@ add_library(xtc SHARED
     xtc/src/TimeStamp.cc
     xtc/src/XtcFileIterator.cc
     xtc/src/ShapesData.cc
+    xtc/src/NamesIter.cc
 )
 
 target_include_directories(xtc PUBLIC
