--- a/psdaq/CMakeLists.txt
+++ b/psdaq/CMakeLists.txt
@@ -1,4 +1,3 @@
-#add_subdirectory(hdf5)
 add_subdirectory(service)
 add_subdirectory(mmhw)
 add_subdirectory(cphw)
@@ -7,3 +6,5 @@ add_subdirectory(epicstools)
 add_subdirectory(dti)
 add_subdirectory(xpm)
 add_subdirectory(hsd)
+add_subdirectory(hdf5)
+add_subdirectory(app)
