--- a/psdaq/scripts/part4.cnf
+++ b/psdaq/scripts/part4.cnf
@@ -1,7 +1,10 @@
+#
+#  Put it all together
+#
 bin_path     = '/reg/neh/home/weaver/lcls2/build/'
 scripts_path = '/reg/neh/home/weaver/lcls2/psdaq/scripts/'
 
-platform = '1'
+platform = '4'
 username = 'lcls2'
 expname  = 'expname'
 expnum   = 'expnum'
@@ -11,6 +14,12 @@ daq_tst_dev02 = "172.21.42.150"
 daq_tst_dev03 = "172.21.42.110"
 daq_tst_dev04 = "172.21.42.148"
 daq_tst_dev05 = "172.21.42.155"
+drp_tst_acc01 = "172.21.42.201"
+drp_tst_acc02 = "172.21.42.202"
+drp_tst_acc03 = "172.21.42.221"
+drp_tst_acc04 = "172.21.42.222"
+drp_tst_acc05 = "172.21.42.223"
+drp_tst_acc06 = "172.21.42.224"
 
 epics_env = 'EPICS_CA_ADDR_LIST=10.0.3.255 EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067'
 pcas_env = 'EPICS_CAS_INTF_ADDR_LIST=10.0.3.5'
@@ -38,13 +47,35 @@ procmgr_config = [
  {                       id:'partca-'+platform ,flags:'s', cmd:scripts_path+'/launch_py '+scripts_path+'/partca.py DAQ:LAB2:PART:'+platform},
  {                       id:'modca'  ,flags:'s', cmd:scripts_path+'/launch_py '+scripts_path+'/xpmca.py DAQ:LAB2:XPM:'+shelf},
  {                       id:'deadca-'+platform  ,flags:'s', cmd:scripts_path+'/launch_py '+scripts_path+'/deadca.py DAQ:LAB2 '+platform+' '+shelf},
+#
+#  XPM controller
+#
  { host: daq_tst_dev05,  id:'xpmioc' ,port:'29452', flags:'s', env:epics_env, cmd:'psdaq/xpm/xpmPVs -a '+ip_addr+'.102 -P DAQ:LAB2'},
- {                       id:'dtisimple' , flags:'sx', cmd:'psdaq/dti/dti_simple -a '+ip_addr+'.103 -u 0xb -f 1,2,8 -t '+platform}, # us2 link down
+#
+#  DTI controllers
+#
+ {                       id:'dti-103' , flags:'sx', cmd:'psdaq/dti/dti_simple -a '+ip_addr+'.103 -u 0x5b -f 1,2,8,16,64   -t '+platform}, # us2,ds5     link down
+ {                       id:'dti-104' , flags:'sx', cmd:'psdaq/dti/dti_simple -a '+ip_addr+'.104 -u 0x1b -f 1,2,8,16      -t '+platform}, # ds2,ds5,ds6 link down
+ {                       id:'dti-105' , flags:'sx', cmd:'psdaq/dti/dti_simple -a '+ip_addr+'.105 -u 0x3d -f 1,4,8,16,32   -t '+platform}, # us1         link down
 # { host: daq_tst_dev05,  id:'dticas' , flags:'sx', env:pcas_env, cmd:scripts_path+'/launch_pcaspy '+scripts_path+'/dticas.py -P LAB2'},
 # {                       id:'dtiioc' , flags:'sx', env:epics_env, cmd:'psdaq/dti/dtiPVs -a '+ip_addr+'.105 -P LAB2'},
 # {                       id:'dtigui' , flags:'s', cmd:scripts_path+'/launch_py '+scripts_path+'/dtica.py '},
- { host: daq_tst_dev02,  id:'xLoop', flags:'s', cmd:'pgp/pgpcardG3/app/xLoopTest -P /dev/pgpcardG3_0_5 -T 0x80 -L 0xf0 -s 10240 -n 16 -F 8 -S' },
- { host: daq_tst_dev01,  id:'xRead', flags:'sx', cmd:'pgp/pgpcardG3/app/xRead -P /dev/pgpcardG3_0_1 -L 4 -r'},
+#
+#  PGP camera simulators
+#
+ { host: daq_tst_dev02,  id:'xLoop-dev02', flags:'s', cmd:'pgp/pgpcardG3/app/xLoopTest -P /dev/pgpcardG3_0_5 -T 0x80 -L 0xf0 -s 10240 -n 16 -F 8 -S' },
+ { host: daq_tst_dev03,  id:'xLoop-dev03', flags:'s', cmd:'pgp/pgpcardG3/app/xLoopTest -P /dev/pgpcardG3_0_5 -T 0x80 -L 0xf0 -s 10240 -n 16 -F 8 -S' },
+ { host: daq_tst_dev04,  id:'xLoop-dev04', flags:'s', cmd:'pgp/pgpcardG3/app/xLoopTest -P /dev/pgpcardG3_0_5 -T 0x80 -L 0xf0 -s 10240 -n 16 -F 8 -S' },
+ { host: drp_tst_acc05,  id:'xLoop-acc05', flags:'s', cmd:'pgp/pgpcardG3/app/xLoopTest -P /dev/pgpcardG3_0_1 -T 0x80 -L 0xff -s 10240 -n 16 -F 8 -S' },
+#
+#  DRP receivers
+#
+ { host: daq_tst_dev01,  id:'xRead-dev01', flags:'sx', cmd:'pgp/pgpcardG3/app/xRead -P /dev/pgpcardG3_0_1 -L 8 -r'},
+ { host: daq_tst_dev04,  id:'xRead-dev04', flags:'sx', cmd:'pgp/pgpcardG3/app/xRead -P /dev/pgpcardG3_0_1 -L 4 -r'},
+ { host: drp_tst_acc04,  id:'xRead-acc04', flags:'sx', cmd:'pgp/pgpcardG3/app/xRead -P /dev/pgpcardG3_0_1 -L 8 -r'},
+#
+#  Diagnostics
+#
  {                       id:'epics', flags:'sx', cmd:epics_env, cmd:'/usr/bin/bash'},
 
 ## procstat
