--- a/psdaq/scripts/base.cnf
+++ b/psdaq/scripts/base.cnf
@@ -1,7 +1,10 @@
+#
+#  Put it all together
+#
 bin_path     = '/reg/neh/home/weaver/lcls2/build/'
 scripts_path = '/reg/neh/home/weaver/lcls2/psdaq/scripts/'
 
-platform = '1'
+platform = '4'
 username = 'lcls2'
 expname  = 'expname'
 expnum   = 'expnum'
@@ -11,6 +14,12 @@ daq_tst_dev02 = "172.21.42.150"
 daq_tst_dev03 = "172.21.42.110"
 daq_tst_dev04 = "172.21.42.148"
 daq_tst_dev05 = "172.21.42.155"
+drp_tst_acc01 = "172.21.42.201"
+drp_tst_acc02 = "172.21.42.202"
+drp_tst_acc03 = "172.21.42.221"
+drp_tst_acc04 = "172.21.42.222"
+drp_tst_acc05 = "172.21.42.223"
+drp_tst_acc06 = "172.21.42.224"
 
 epics_env = 'EPICS_CA_ADDR_LIST=10.0.3.255 EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067'
 pcas_env = 'EPICS_CAS_INTF_ADDR_LIST=10.0.3.5'
@@ -32,27 +41,15 @@ ip_addr = '10.0.'+shelf
 #        'u'         -> uniqueid: use 'id' as detector alias (supported by acq, cam, camedt, evr, and simcam)
 
 procmgr_config = [
-#  PCAS
- { host: daq_tst_dev05,  id:'partcas',port:'29450', flags:'s', env:pcas_env, cmd:scripts_path+'/launch_pcaspy '+scripts_path+'/partcas.py -P DAQ:LAB2'},
- { host: daq_tst_dev05,  id:'modcas' ,port:'29451', flags:'s', env:pcas_env, cmd:scripts_path+'/launch_pcaspy '+scripts_path+'/modcas.py -P DAQ:LAB2:XPM:'+shelf},
-# GUIs
- {                       id:'partca-'+platform ,flags:'s', cmd:scripts_path+'/launch_py '+scripts_path+'/partca.py DAQ:LAB2:PART:'+platform},
  {                       id:'modca'  ,flags:'s', cmd:scripts_path+'/launch_py '+scripts_path+'/xpmca.py DAQ:LAB2:XPM:'+shelf},
- {                       id:'deadca-'+platform  ,flags:'s', cmd:scripts_path+'/launch_py '+scripts_path+'/deadca.py DAQ:LAB2 '+platform+' '+shelf},
-# XPM Controller
+ {                       id:'partca' ,flags:'s', cmd:scripts_path+'/launch_py '+scripts_path+'/partca-sum.py DAQ:LAB2:PART'},
+#
+#  XPM controller
+#
  { host: daq_tst_dev05,  id:'xpmioc' ,port:'29452', flags:'s', env:epics_env, cmd:'psdaq/xpm/xpmPVs -a '+ip_addr+'.102 -P DAQ:LAB2'},
-# DTI Controller
- {                       id:'dtisimple' , flags:'sx', cmd:'psdaq/dti/dti_simple -a '+ip_addr+'.103 -u 0xf -f 1,2,4,8 -t '+platform},
-# { host: daq_tst_dev05,  id:'dticas' , flags:'sx', env:pcas_env, cmd:scripts_path+'/launch_pcaspy '+scripts_path+'/dticas.py -P LAB2'},
-# {                       id:'dtiioc' , flags:'sx', env:epics_env, cmd:'psdaq/dti/dtiPVs -a '+ip_addr+'.105 -P LAB2'},
-# {                       id:'dtigui' , flags:'s', cmd:scripts_path+'/launch_py '+scripts_path+'/dtica.py '},
-# PGP Camera simulator
- { host: daq_tst_dev02,  id:'xLoop', flags:'s', cmd:'pgp/pgpcardG3/app/xLoopTest -P /dev/pgpcardG3_0_5 -T 0x80 -L 0xf0 -s 10240 -n 16 -F 8 -S' },
-# Digitizer
- { host: daq_tst_dev02,  id:'hsd'    ,flags:'sx', cmd:bin_path+'psdaq/hsd/hsd_pgp -c 0xf -s 0x3 -l 128 -p '+platform+' -t 0'},
-# DRP Receivers
- { host: daq_tst_dev01,  id:'xRead', flags:'sx', cmd:'pgp/pgpcardG3/app/xRead -P /dev/pgpcardG3_0_1 -L 4 -r -c 32 -o 8'},
- { host: daq_tst_dev02,  id:'rdr'    ,flags:'sx', cmd:bin_path+'psdaq/hsd/hsdRead -P /dev/pgpcardG3_0_1 -L 4 -r -c 32 -o 8'},
+#
+#  Diagnostics
+#
  {                       id:'epics', flags:'sx', cmd:epics_env, cmd:'/usr/bin/bash'},
 
 ## procstat
