--- a/psdaq/scripts/part1.cnf
+++ b/psdaq/scripts/part1.cnf
@@ -42,16 +42,16 @@ procmgr_config = [
 # XPM Controller
  { host: daq_tst_dev05,  id:'xpmioc' ,port:'29452', flags:'s', env:epics_env, cmd:'psdaq/xpm/xpmPVs -a '+ip_addr+'.102 -P DAQ:LAB2'},
 # DTI Controller
- {                       id:'dtisimple' , flags:'sx', cmd:'psdaq/dti/dti_simple -a '+ip_addr+'.103 -u 0xf -f 1,2,4,8 -t '+platform},
+# {                       id:'dtisimple' , flags:'sx', cmd:'psdaq/dti/dti_simple -a '+ip_addr+'.103 -u 0xf -f 1,2,4,8 -t '+platform},
 # { host: daq_tst_dev05,  id:'dticas' , flags:'sx', env:pcas_env, cmd:scripts_path+'/launch_pcaspy '+scripts_path+'/dticas.py -P LAB2'},
 # {                       id:'dtiioc' , flags:'sx', env:epics_env, cmd:'psdaq/dti/dtiPVs -a '+ip_addr+'.105 -P LAB2'},
 # {                       id:'dtigui' , flags:'s', cmd:scripts_path+'/launch_py '+scripts_path+'/dtica.py '},
 # PGP Camera simulator
- { host: daq_tst_dev02,  id:'xLoop', flags:'s', cmd:'pgp/pgpcardG3/app/xLoopTest -P /dev/pgpcardG3_0_5 -T 0x80 -L 0xf0 -s 10240 -n 16 -F 8 -S' },
+# { host: daq_tst_dev02,  id:'xLoop', flags:'s', cmd:'pgp/pgpcardG3/app/xLoopTest -P /dev/pgpcardG3_0_5 -T 0x80 -L 0xf0 -s 10240 -n 16 -F 8 -S' },
 # Digitizer
- { host: daq_tst_dev02,  id:'hsd'    ,flags:'sx', cmd:bin_path+'psdaq/hsd/hsd_pgp -c 0xf -s 0x3 -l 128 -p '+platform+' -t 0'},
+ { host: daq_tst_dev02,  id:'hsd'    ,flags:'sx', cmd:bin_path+'psdaq/hsd/hsd_pgp -c 0x1 -s 0x3 -l 128 -p '+platform+' -t 0'},
 # DRP Receivers
- { host: daq_tst_dev01,  id:'xRead', flags:'sx', cmd:'pgp/pgpcardG3/app/xRead -P /dev/pgpcardG3_0_1 -L 4 -r -c 32 -o 8'},
+# { host: daq_tst_dev01,  id:'xRead', flags:'sx', cmd:'pgp/pgpcardG3/app/xRead -P /dev/pgpcardG3_0_1 -L 4 -r -c 32 -o 8'},
  { host: daq_tst_dev02,  id:'rdr'    ,flags:'sx', cmd:bin_path+'psdaq/hsd/hsdRead -P /dev/pgpcardG3_0_1 -L 4 -r -c 32 -o 8'},
  {                       id:'epics', flags:'sx', cmd:epics_env, cmd:'/usr/bin/bash'},
 
