Added horizontal scan mode to GthEyeScan for DFE GTH transceivers.  Factored PLL control into separate class for use in DTI.  Added timing Xbar programming to dti_simple since new firmware does not reset to correct settings.

--- a/psdaq/cphw/CMakeLists.txt
+++ b/psdaq/cphw/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 add_library(cphw SHARED
     Reg_rssi.cc
+    AmcPLL.cc
     AmcTiming.cc
     AxiVersion.cc
     GthEyeScan.cc
@@ -11,6 +12,7 @@ add_library(cphw SHARED
 
 add_library(cphwr SHARED
     Reg.cc
+    AmcPLL.cc
     AmcTiming.cc
     AxiVersion.cc
     GthEyeScan.cc
