Changed procmgr bin paths to be relative.  Changed part-sum.py to show all 8 partitions.

--- a/psdaq/scripts/part3.cnf
+++ b/psdaq/scripts/part3.cnf
@@ -1,5 +1,5 @@
-bin_path     = '/reg/neh/home/weaver/lcls2/build/'
-scripts_path = '/reg/neh/home/weaver/lcls2/psdaq/scripts/'
+bin_path     = './'
+scripts_path = '../psdaq/scripts/'
 
 platform = '3'
 username = 'lcls2'
