--- a/psdaq/scripts/part4.cnf
+++ b/psdaq/scripts/part4.cnf
@@ -1,8 +1,8 @@
 #
 #  Put it all together
 #
-bin_path     = '/reg/neh/home/weaver/lcls2/build/'
-scripts_path = '/reg/neh/home/weaver/lcls2/psdaq/scripts/'
+bin_path     = './'
+scripts_path = '../psdaq/scripts/'
 
 platform = '4'
 username = 'lcls2'
