change CMakeLists.txt for new conda env

--- a/psdaq/dti/CMakeLists.txt
+++ b/psdaq/dti/CMakeLists.txt
@@ -11,18 +11,26 @@ target_include_directories(dti PUBLIC
     /reg/common/package/epicsca/3.14.12/include/os/Linux
 )
 
+find_library(YAML_CPP_LIBRARY yaml-cpp HINTS $ENV{CONDA_PREFIX}/lib)
+find_library(CPSW_LIBRARY cpsw HINTS $ENV{CONDA_PREFIX}/lib)
+
 #
 #  dti_simple
 #
 add_executable(dti_simple dti_simple.cc)
 
 target_link_libraries(dti_simple
-   dl
-   pthread
    service
    cphw
-   /reg/common/package/cpsw/framework-R3-4/x86_64-rhel7-opt/lib/libcpsw.so
-   /reg/common/package/yaml-cpp/yaml-cpp-0.5.3/x86_64-rhel7-gcc48-opt/lib/libyaml-cpp.so
+   #cpsw
+   ${CPSW_LIBRARY}
+   ${YAML_CPP_LIBRARY}
+   dl
+   pthread
+   rt
+   #yaml-cpp
+   #/reg/common/package/cpsw/framework-R3-4/x86_64-rhel7-opt/lib/libcpsw.so
+   #/reg/common/package/yaml-cpp/yaml-cpp-0.5.3/x86_64-rhel7-gcc48-opt/lib/libyaml-cpp.so
 )
 
 #
@@ -31,15 +39,20 @@ target_link_libraries(dti_simple
 add_executable(dtiPVs dtiPVs.cc)
 
 target_link_libraries(dtiPVs
-   dl
-   pthread
    service
    cphw
-   epicstools
    dti
    /reg/common/package/epicsca/3.14.12/lib/x86_64-rhel7-opt/libca.so
-   /reg/common/package/cpsw/framework-R3-4/x86_64-rhel7-opt/lib/libcpsw.so
-   /reg/common/package/yaml-cpp/yaml-cpp-0.5.3/x86_64-rhel7-gcc48-opt/lib/libyaml-cpp.so
+   epicstools
+   ${CPSW_LIBRARY}
+   ${YAML_CPP_LIBRARY}
+   #cpsw
+   #yaml-cpp
+   dl
+   pthread
+   rt
+   #/reg/common/package/cpsw/framework-R3-4/x86_64-rhel7-opt/lib/libcpsw.so
+   #/reg/common/package/yaml-cpp/yaml-cpp-0.5.3/x86_64-rhel7-gcc48-opt/lib/libyaml-cpp.so
 )
 
 #
@@ -48,12 +61,17 @@ target_link_libraries(dtiPVs
 add_executable(dti_eyescan dti_eyescan.cc)
 
 target_link_libraries(dti_eyescan
-   dl
-   pthread
    service
    cphw
-   /reg/common/package/cpsw/framework-R3-4/x86_64-rhel7-opt/lib/libcpsw.so
-   /reg/common/package/yaml-cpp/yaml-cpp-0.5.3/x86_64-rhel7-gcc48-opt/lib/libyaml-cpp.so
+   ${CPSW_LIBRARY}
+   ${YAML_CPP_LIBRARY}
+   #cpsw
+   #yaml-cpp
+   dl
+   pthread
+   rt
+   #/reg/common/package/cpsw/framework-R3-4/x86_64-rhel7-opt/lib/libcpsw.so
+   #/reg/common/package/yaml-cpp/yaml-cpp-0.5.3/x86_64-rhel7-gcc48-opt/lib/libyaml-cpp.so
 )
 
 #
@@ -62,13 +80,18 @@ target_link_libraries(dti_eyescan
 add_executable(dtiHsrCfg dtiHsrCfg.cc)
 
 target_link_libraries(dtiHsrCfg
-   dl
-   pthread
    service
    cphw
-   epicstools
    dti
    /reg/common/package/epicsca/3.14.12/lib/x86_64-rhel7-opt/libca.so
-   /reg/common/package/cpsw/framework-R3-4/x86_64-rhel7-opt/lib/libcpsw.so
-   /reg/common/package/yaml-cpp/yaml-cpp-0.5.3/x86_64-rhel7-gcc48-opt/lib/libyaml-cpp.so
+   epicstools
+   ${CPSW_LIBRARY}
+   ${YAML_CPP_LIBRARY}
+   dl
+   pthread
+   rt
+   #cpsw
+   #yaml-cpp
+   #/reg/common/package/cpsw/framework-R3-4/x86_64-rhel7-opt/lib/libcpsw.so
+   #/reg/common/package/yaml-cpp/yaml-cpp-0.5.3/x86_64-rhel7-gcc48-opt/lib/libyaml-cpp.so
 )
