--- a/psdaq/cphw/CMakeLists.txt
+++ b/psdaq/cphw/CMakeLists.txt
@@ -23,17 +23,17 @@ add_library(cphwr SHARED
 
 target_include_directories(cphw PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
-    /reg/common/package/cpsw/framework-R3-4/x86_64-rhel7-opt/include
-    /reg/common/package/boost/1.57.0/x86_64-rhel7-gcc48-opt/include
-    /reg/common/package/yaml-cpp/yaml-cpp-0.5.3/x86_64-rhel7-gcc48-opt/include
+    $ENV{CONDA_PREFIX}/include
 )
 
 target_include_directories(cphwr PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
-    /reg/common/package/cpsw/framework-R3-4/x86_64-rhel7-opt/include
-    /reg/common/package/boost/1.57.0/x86_64-rhel7-gcc48-opt/include
-    /reg/common/package/yaml-cpp/yaml-cpp-0.5.3/x86_64-rhel7-gcc48-opt/include
+    $ENV{CONDA_PREFIX}/include
 )
+
+find_library(YAML_CPP_LIBRARY yaml-cpp HINTS $ENV{CONDA_PREFIX}/lib)
+find_library(CPSW_LIBRARY cpsw HINTS $ENV{CONDA_PREFIX}/lib)
+#find_package(Boost 1.65 REQUIRED PATHS $ENV{CONDA_PREFIX})
 
 #
 #  amctiming
@@ -41,12 +41,15 @@ target_include_directories(cphwr PUBLIC
 add_executable(amctiming amctiming.cc)
 
 target_link_libraries(amctiming
+    cphw
+    ${CPSW_LIBRARY}
+    ${YAML_CPP_LIBRARY}
     dl
     pthread
-    cphw
-    /reg/common/package/cpsw/framework-R3-4/x86_64-rhel7-opt/lib/libcpsw.so
+    rt
+#    /reg/common/package/cpsw/framework-R3-4/x86_64-rhel7-opt/lib/libcpsw.so
 #    /reg/common/package/boost/1.57.0/x86_64-rhel7-gcc48-opt/lib
-    /reg/common/package/yaml-cpp/yaml-cpp-0.5.3/x86_64-rhel7-gcc48-opt/lib/libyaml-cpp.so
+#    /reg/common/package/yaml-cpp/yaml-cpp-0.5.3/x86_64-rhel7-gcc48-opt/lib/libyaml-cpp.so
 )
 
 #
@@ -55,9 +58,9 @@ target_link_libraries(amctiming
 add_executable(amctiming_udp amctiming.cc)
 
 target_link_libraries(amctiming_udp
+    cphwr
     dl
     pthread
-    cphwr
 )
 
 #
