--- a/psdaq/cphw/CMakeLists.txt
+++ b/psdaq/cphw/CMakeLists.txt
@@ -31,8 +31,8 @@ target_include_directories(cphwr PUBLIC
     $ENV{CONDA_PREFIX}/include
 )
 
-find_library(YAML_CPP_LIBRARY yaml-cpp HINTS $ENV{CONDA_PREFIX}/lib)
-find_library(CPSW_LIBRARY cpsw HINTS $ENV{CONDA_PREFIX}/lib)
+find_library(YAML_CPP_LIBRARY yaml-cpp PATH $ENV{CONDA_PREFIX}/lib)
+find_library(CPSW_LIBRARY cpsw PATH $ENV{CONDA_PREFIX}/lib)
 #find_package(Boost 1.65 REQUIRED PATHS $ENV{CONDA_PREFIX})
 
 #
@@ -46,10 +46,6 @@ target_link_libraries(amctiming
     ${YAML_CPP_LIBRARY}
     dl
     pthread
-    rt
-#    /reg/common/package/cpsw/framework-R3-4/x86_64-rhel7-opt/lib/libcpsw.so
-#    /reg/common/package/boost/1.57.0/x86_64-rhel7-gcc48-opt/lib
-#    /reg/common/package/yaml-cpp/yaml-cpp-0.5.3/x86_64-rhel7-gcc48-opt/lib/libyaml-cpp.so
 )
 
 #
@@ -72,8 +68,4 @@ target_link_libraries(amc_eyescan
     dl
     pthread
     cphwr
-#    /reg/common/package/cpsw/framework-R3-4/x86_64-rhel7-opt/lib/libcpsw.so
-#    /reg/common/package/boost/1.57.0/x86_64-rhel7-gcc48-opt/lib
-#    /reg/common/package/yaml-cpp/yaml-cpp-0.5.3/x86_64-rhel7-gcc48-opt/lib/libyaml-cpp.so
 )
-
