--- a/psdaq/epicstools/CMakeLists.txt
+++ b/psdaq/epicstools/CMakeLists.txt
@@ -6,15 +6,6 @@ add_library(epicstools SHARED
 
 target_include_directories(epicstools PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
-#    $<INSTALL_INTERFACE:include>
-    /reg/common/package/epicsca/3.14.12/include
-    /reg/common/package/epicsca/3.14.12/include/os/Linux
+    $ENV{CONDA_PREFIX}/epics/include
+    $ENV{CONDA_PREFIX}/epics/include/os/Linux
 )
-
-#add_executable(h5writer
-#    ../app/h5writer.cc
-#)
-#target_link_libraries(h5writer
-#    pshdf5
-#    xtc
-#)
