--- a/psdaq/xpm/CMakeLists.txt
+++ b/psdaq/xpm/CMakeLists.txt
@@ -10,12 +10,13 @@ add_library(xpm SHARED
 
 target_include_directories(xpm PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
-    /reg/common/package/epicsca/3.14.12/include
-    /reg/common/package/epicsca/3.14.12/include/os/Linux
+    $ENV{CONDA_PREFIX}/epics/include
+    $ENV{CONDA_PREFIX}/epics/include/os/Linux
 )
 
-find_library(YAML_CPP_LIBRARY yaml-cpp HINTS $ENV{CONDA_PREFIX}/lib)
-find_library(CPSW_LIBRARY cpsw HINTS $ENV{CONDA_PREFIX}/lib)
+find_library(YAML_CPP_LIB yaml-cpp PATH $ENV{CONDA_PREFIX}/lib)
+find_library(CPSW_LIB cpsw PATH $ENV{CONDA_PREFIX}/lib)
+find_library(EPICS_CA_LIB cpsw PATH $ENV{CONDA_PREFIX}/lib)
 
 #
 #  xpm_simple
@@ -25,13 +26,10 @@ add_executable(xpm_simple xpm_simple.cc)
 target_link_libraries(xpm_simple
    service
    cphw
-   ${CPSW_LIBRARY}
-   ${YAML_CPP_LIBRARY}
+   ${CPSW_LIB}
+   ${YAML_CPP_LIB}
    dl
    pthread
-   rt
-   #/reg/common/package/cpsw/framework-R3-4/x86_64-rhel7-opt/lib/libcpsw.so
-   #/reg/common/package/yaml-cpp/yaml-cpp-0.5.3/x86_64-rhel7-gcc48-opt/lib/libyaml-cpp.so
 )
 
 #
@@ -44,14 +42,11 @@ target_link_libraries(xpmPVs
    cphw
    epicstools
    xpm
-   /reg/common/package/epicsca/3.14.12/lib/x86_64-rhel7-opt/libca.so
-   ${CPSW_LIBRARY}
-   ${YAML_CPP_LIBRARY}
+   ${EPICS_CA_LIB}
+   ${CPSW_LIB}
+   ${YAML_CPP_LIB}
    dl
    pthread
-   rt
-   #/reg/common/package/cpsw/framework-R3-4/x86_64-rhel7-opt/lib/libcpsw.so
-   #/reg/common/package/yaml-cpp/yaml-cpp-0.5.3/x86_64-rhel7-gcc48-opt/lib/libyaml-cpp.so
 )
 
 #
@@ -63,7 +58,7 @@ target_link_libraries(xpmPeek
    service
    cphwr
    xpm
-   /reg/common/package/epicsca/3.14.12/lib/x86_64-rhel7-opt/libca.so
+   ${EPICS_CA_LIB}
    epicstools
    dl
    pthread
@@ -78,13 +73,10 @@ target_link_libraries(xpmHsrCfg
    service
    cphw
    xpm
-   /reg/common/package/epicsca/3.14.12/lib/x86_64-rhel7-opt/libca.so
+   ${EPICS_CA_LIB}
    epicstools
-   ${CPSW_LIBRARY}
-   ${YAML_CPP_LIBRARY}
+   ${CPSW_LIB}
+   ${YAML_CPP_LIB}
    dl
    pthread
-   rt
-   #/reg/common/package/cpsw/framework-R3-4/x86_64-rhel7-opt/lib/libcpsw.so
-   #/reg/common/package/yaml-cpp/yaml-cpp-0.5.3/x86_64-rhel7-gcc48-opt/lib/libyaml-cpp.so
 )
