fix hdf5 linking with new libstdc++

--- a/psdaq/hdf5/CMakeLists.txt
+++ b/psdaq/hdf5/CMakeLists.txt
@@ -12,4 +12,5 @@ target_include_directories(pshdf5 PUBLIC
 target_link_libraries(pshdf5
     ${HDF5_LIBRARIES}
     ${HDF5_HL_LIBRARIES}
+    $ENV{CONDA_PREFIX}/lib/libstdc++.so.6
 )
